# athenaforge

./: .gitignore  README.md  pyproject.toml
seed/: demo.sh
seed/dags/: daily_reporting.py  etl_pipeline.py
seed/json/: dashboard_configs.json  deps.json  gate_criteria.json  iam_policies.json  kafka_topics.json  kpis.json  lambda_sources.json  udfs.json
seed/manifests/: lob_manifest.yaml
seed/sql/presto/: campaign_performance.sql  inventory_snapshot.sql  report_daily_revenue.sql  user_activity_summary.sql
src/athenaforge/: __init__.py
src/athenaforge/application/dtos/: dependency_dtos.py  foundation_dtos.py  sql_dtos.py  transfer_dtos.py  wave_dtos.py
src/athenaforge/domain/entities/: wave.py  (+6 more)
tests/: conftest.py
tests/application/: test_dag_orchestrator.py  test_dependency_use_cases.py  test_foundation_use_cases.py  test_generate_scaffold.py  test_migration_workflow.py  test_sql_use_cases.py  test_transfer_use_cases.py  test_translate_batch.py  test_wave_execution_workflow.py  test_wave_use_cases.py
tests/domain/: test_cost_calculator.py  test_dag_rewriter_service.py  test_delta_log_health_service.py  test_dependency_scanner.py  test_entities.py  test_map_cascade_analyser.py  test_parallel_running_state_machine.py  test_rollback_evaluator.py  test_sql_pattern_matcher.py  test_tier_classification_service.py  test_udf_classifier.py  test_value_objects.py  test_wave_planner_service.py
tests/infrastructure/: test_json_repositories.py  test_mcp_servers.py  test_pattern_loader.py  test_yaml_config_adapter.py
tests/integration/: test_full_migration_flow.py
(+115 files in other folders)
